{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 87,
  "lineage": "c4e2fe76-f28b-52c6-dca7-128bcaedc940",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:800723880739:internet-gateway/igw-089f2dc7e9b2ad8ee",
            "id": "igw-089f2dc7e9b2ad8ee",
            "owner_id": "800723880739",
            "tags": {
              "Project": "Discord_Bot"
            },
            "tags_all": {
              "Project": "Discord_Bot"
            },
            "vpc_id": "vpc-00debf36490560fb4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:800723880739:route-table/rtb-0e31c3ab87c854d60",
            "id": "rtb-0e31c3ab87c854d60",
            "owner_id": "800723880739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089f2dc7e9b2ad8ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Project": "Discord_Bot"
            },
            "tags_all": {
              "Project": "Discord_Bot"
            },
            "timeouts": null,
            "vpc_id": "vpc-00debf36490560fb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0218fee58bf355868",
            "route_table_id": "rtb-0e31c3ab87c854d60",
            "subnet_id": "subnet-0aa03ba2deb536a00"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05853a89f19449348",
            "route_table_id": "rtb-0e31c3ab87c854d60",
            "subnet_id": "subnet-078d0548b79fafb82"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "discord_bot_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:800723880739:security-group/sg-0c1d48ec062c7104b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1d48ec062c7104b",
            "ingress": [],
            "name": "discord-bot-sg",
            "name_prefix": "",
            "owner_id": "800723880739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "Discord_Bot"
            },
            "tags_all": {
              "Project": "Discord_Bot"
            },
            "timeouts": null,
            "vpc_id": "vpc-00debf36490560fb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:800723880739:subnet/subnet-0aa03ba2deb536a00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa03ba2deb536a00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800723880739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "discord-bot-subnet-0",
              "Project": "Discord_Bot"
            },
            "tags_all": {
              "Name": "discord-bot-subnet-0",
              "Project": "Discord_Bot"
            },
            "vpc_id": "vpc-00debf36490560fb4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:800723880739:subnet/subnet-078d0548b79fafb82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078d0548b79fafb82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800723880739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "discord-bot-subnet-1",
              "Project": "Discord_Bot"
            },
            "tags_all": {
              "Name": "discord-bot-subnet-1",
              "Project": "Discord_Bot"
            },
            "vpc_id": "vpc-00debf36490560fb4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:800723880739:vpc/vpc-00debf36490560fb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a71a891c4d2d888",
            "default_route_table_id": "rtb-0cf2bbf41d41e9480",
            "default_security_group_id": "sg-0f56871b6a7cc2abe",
            "dhcp_options_id": "dopt-0e807edcd82fb0500",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00debf36490560fb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf2bbf41d41e9480",
            "owner_id": "800723880739",
            "tags": {
              "Name": "discord-bot-vpc",
              "Project": "Discord_Bot"
            },
            "tags_all": {
              "Name": "discord-bot-vpc",
              "Project": "Discord_Bot"
            }
          }
        }
      ]
    }
  ]
}